--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -152,7 +152,7 @@ p, li { white-space: pre-wrap; }
 &lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="b1">
     <property name="geometry">
      <rect>
       <x>130</x>
@@ -165,7 +165,7 @@ p, li { white-space: pre-wrap; }
      <string>1</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="b2">
     <property name="geometry">
      <rect>
       <x>200</x>
@@ -178,7 +178,7 @@ p, li { white-space: pre-wrap; }
      <string>2</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="b3">
     <property name="geometry">
      <rect>
       <x>270</x>
@@ -191,7 +191,7 @@ p, li { white-space: pre-wrap; }
      <string>3</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_12">
+   <widget class="QPushButton" name="b4">
     <property name="geometry">
      <rect>
       <x>130</x>
@@ -204,7 +204,7 @@ p, li { white-space: pre-wrap; }
      <string>4</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_13">
+   <widget class="QPushButton" name="b5">
     <property name="geometry">
      <rect>
       <x>200</x>
@@ -217,7 +217,7 @@ p, li { white-space: pre-wrap; }
      <string>5</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_14">
+   <widget class="QPushButton" name="b6">
     <property name="geometry">
      <rect>
       <x>270</x>
@@ -230,7 +230,7 @@ p, li { white-space: pre-wrap; }
      <string>6</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_15">
+   <widget class="QPushButton" name="b7">
     <property name="geometry">
      <rect>
       <x>130</x>
@@ -243,7 +243,7 @@ p, li { white-space: pre-wrap; }
      <string>7</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_16">
+   <widget class="QPushButton" name="b8">
     <property name="geometry">
      <rect>
       <x>200</x>
@@ -256,7 +256,7 @@ p, li { white-space: pre-wrap; }
      <string>8</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_17">
+   <widget class="QPushButton" name="b9">
     <property name="geometry">
      <rect>
       <x>270</x>
@@ -269,7 +269,7 @@ p, li { white-space: pre-wrap; }
      <string>9</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_18">
+   <widget class="QPushButton" name="ok">
     <property name="geometry">
      <rect>
       <x>130</x>
@@ -282,7 +282,7 @@ p, li { white-space: pre-wrap; }
      <string>OK</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_19">
+   <widget class="QPushButton" name="reset">
     <property name="geometry">
      <rect>
       <x>200</x>
@@ -295,7 +295,7 @@ p, li { white-space: pre-wrap; }
      <string>RESET</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_20">
+   <widget class="QPushButton" name="cancel">
     <property name="geometry">
      <rect>
       <x>270</x>
